# jetson-car

./: .gitignore  AutoPilot.py  README.md  auto_pilot_model.py  drive.py  model.py  pilot.py  record_data.py  requirements
arduino/: rc_serial_data.py  test_run.py~
arduino/rc_esc/: rc_esc.ino
arduino/rc_steer_servo/: rc_steer_servo.ino
arduino/rv_servos/: rv_servos.ino
data/: README.md  bag2csv.py  clean.sh  transfer2host.sh
data/model/: DatNet.py  README.md  cnn.json
data/train/: DatNet.py  DataSet.py  FLAGS.py  pickle_generator.py  train.py
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/razor_imu_9dof/: imuConfig.h
devel/include/rc_car_msgs/: CarController.h  CarInfo.h  CarRecorder.h
devel/include/realsense_camera/: CameraConfiguration.h  CameraConfigurationRequest.h  CameraConfigurationResponse.h  ForcePower.h  ForcePowerRequest.h  ForcePowerResponse.h  GetIMUInfo.h  GetIMUInfoRequest.h  GetIMUInfoResponse.h  IMUInfo.h  IsPowered.h  IsPoweredRequest.h  IsPoweredResponse.h  SetPower.h  SetPowerRequest.h  SetPowerResponse.h  f200_paramsConfig.h  r200_paramsConfig.h  sr300_paramsConfig.h  zr300_paramsConfig.h
devel/lib/controller/: controller_node
devel/lib/pkgconfig/: controller.pc  jetson_joystick.pc  pilot.pc  razor_imu_9dof.pc  rc_car_msgs.pc  realsense_camera.pc  record_data.pc  usb_cam.pc
devel/lib/realsense_camera/: get_debug_info  tests_camera_core  tests_rgbd_topics
devel/lib/usb_cam/: usb_cam_node
docs/setup/: README.md
docs/setup/drivers/: razor_imu_m0_driver  rpm_monitor.ino  teensy_driver.ino
docs/setup/scripts/: 2_installDependencies.sh
docs/tiger_script/: .1_install_custom_kernel.sh.swp  .1_make_custom_kernel.sh.swp  .2_build_and_copy_kernel.sh.swp  0_run_all.sh  1_make_custom_kernel.sh  2_build_and_copy_kernel.sh  3_install_ros.sh  4_install_realsense.sh  5_install_ros_realsense.sh  6_setup_workspace.sh  README.md
docs/tiger_script/enable_gpio_non_root/: 99-com.rules  fix_udev_gpio.sh  gpio.sh  setup_gpio.sh
docs/tiger_script/scripts/: fixMakeFiles.sh  getKernelSources.sh
jetson_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
jetson_ws/src/car_info_msg/: CMakeLists.txt  package.xml
jetson_ws/src/car_info_msg/msg/: CarInfo.msg
jetson_ws/src/jetson_arduino/: CMakeLists.txt  package.xml
jetson_ws/src/jetson_joystick/: CMakeLists.txt  CMakeLists.txt~
jetson_ws/src/jetson_joystick/launch/: jetson_joystick.launch  jetson_joystick.launch~  record_data.launch
jetson_ws/src/jetson_joystick/src/: .jetson_joystick_node.cpp.swp  jetson_joystick_node.cpp  jetson_joystick_node.cpp~
jetson_ws/src/rc_car_msgs/: CMakeLists.txt  package.xml
jetson_ws/src/rc_car_msgs/msg/: CarInfo.msg
jetson_ws/src/record_data/: CMakeLists.txt  package.xml
jetsontk1/: re_configurekenel
launch/: recorder.launch
model/: DataSet.py  FLAGS.py  README.md  cnn.h5  cnn.json  image_processor.py  model.json  model.py  pickle_generator.py  train.py
monitor/rviz/: imu_monitor.perspective
ros_tutorial/devel/: .catkin
setup/: 1_build_custom_kernel.md  2_install_ros.md  README.md  install_dependencies.sh  jetson_car_full_setup.sh  tk1_ros_setup.sh  tx2_install.sh  tx2_ros_install.sh  workspace.perspective
setup/arduino/: joystick.ino  servo_controller.ino  test_run.py
setup/arduino/joystick/: joystick.ino
setup/arduino/joystick2/: joystick2.ino
setup/arduino/servo_controller/: servo_controller.ino
setup/drivers/: gps_monitor.ino  rpm_monitor.ino  teensy_driver.ino
setup/jetsontk1/installRosController/: ArduinoNanoNotes.txt  RunJetsonCar.txt  installJetsonCar.sh  installJetsonCar.sh~  setupCatkinWorkspace.sh~
setup/jetsontk1/setupHotpot/: HowToCreateHotSpoOnLinux  HowToCreateHotSpoOnLinux~
setup/ros_lib/control_msgs/: GripperCommand.h  GripperCommandResult.h  JointControllerState.h  JointTolerance.h  PointHeadFeedback.h  SingleJointPositionFeedback.h  SingleJointPositionGoal.h
setup/ros_lib/image_view2/: ImageMarker2.h  MouseEvent.h
setup/ros_lib/jsk_footstep_msgs/: ExecFootstepsAction.h  ExecFootstepsActionGoal.h  Footstep.h  PlanFootstepsActionFeedback.h  PlanFootstepsActionResult.h  PlanFootstepsFeedback.h  PlanFootstepsResult.h
setup/ros_lib/jsk_recognition_msgs/: Accuracy.h  BoolStamped.h  BoundingBoxArrayWithCameraInfo.h  Circle2DArray.h  ClassificationResult.h  ClusterPointIndices.h  ColorHistogram.h  ContactSensor.h  ContactSensorArray.h  DepthCalibrationParameter.h  HistogramWithRangeBin.h  ICPResult.h  ImageDifferenceValue.h  Line.h  ParallelEdge.h  ParallelEdgeArray.h  PlotDataArray.h  PointsArray.h  PolygonArray.h  PosedCameraInfo.h  RectArray.h  RotatedRectStamped.h  SimpleHandle.h  SimpleOccupancyGrid.h  SimpleOccupancyGridArray.h  SparseOccupancyGrid.h  SparseOccupancyGridCell.h  TimeRange.h  Torus.h  TrackerStatus.h
setup/ros_lib/octomap_msgs/: Octomap.h
setup/scripts/: 1_installRos.sh  2_installDependencies.sh
setup/teensy/: joystick.ino
src/controller/: .activate.py.swp  CMakeLists.txt  Pilot.py  activate.py  package.xml
src/controller/cfg/: paths.yaml
src/controller/include/: autopilot.h
src/controller/launch/: autopilot.launch  manual.launch
src/controller/src/: DatNet.py  autopilot.cpp  controller.py  joystick_node.cpp
src/jetson_joystick/: CMakeLists.txt
src/jetson_joystick/launch/: jetson_joystick.launch
src/jetson_joystick/src/: jetson_joystick_node.cpp
src/perception/: CMakeLists.txt  Pilot.py  activate.py  package.xml
src/perception/launch/: autopilot.launch  manual.launch
src/perception/src/: DatNet.py  autopilot.cpp  cnn.json  controller.py  joystick_node.cpp
src/pilot/: CMakeLists.txt  Pilot.py  activate.py
src/pilot/launch/: activate.launch
src/pilot/src/: DatNet.py  FLAGS.py  cnn.h5  cnn.json  controller.py  model.py  pilot.py  run.py
src/razor_imu/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/rc_car_msgs/: CMakeLists.txt
src/record_data/: CMakeLists.txt  package.xml  recorder.py
src/record_data/launch/: recorder.launch
src/record_data/src/: start.py
src/vision/: start.launch
utils/: bag2csv.py  pickle_generator.py
(+349 files in other folders)
