<?xml version="1.0"?>
<package>
  <name>controller</name>
  <version>0.0.0</version>
  <description>Activate autonomous/manual mode</description>
  <maintainer email="tdat.nguyen93@gmail.com">Dat Nguyen</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rc_car_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>rc_car_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>

   <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
