<?xml version="1.0"?>
<package>
  <name>rc_car_msgs</name>
  <version>0.0.0</version>
  <description>ROS Messsage definitions for RC Cars. Provide SPEED, STEER ANGLE, THROOTLE</description>

  <maintainer email="tdat.nguyen93@gmail.com">Dat Nguyen</maintainer>


  <license>MIT</license>


  <url type="repository">https://github.com/dat-ai/jetson-car</url>
  <author email="tdat.nguyen93@gmail.com">Dat Nguyen</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

   <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
